# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "website"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TypedDuck <typedduck@posteo.net>"]
homepage = "https://github.com/typedduck/website"
repository = "https://github.com/typedduck/website"
description = "Website"
categories = ["web-programming"]
keywords = ["website", "web"]
readme = "README.md"
include = ["LICENSE-*", "README.md", "CHANGELOG.md", "Cargo.toml", "/src"]

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1

[lints.clippy]
pedantic = "warn"
cargo = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
correctness = "warn"
suspicious = "warn"
nursery = "warn"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["env", "cargo"] }
config = { version = "0.14.0", default-features = false, features = [
    "toml",
    "convert-case",
] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
